// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetching a regular search 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "HISTORY_PUSH",
  "VIEWER_CLEAR",
  "NOTICE_DISMISS",
  "CHART_CLEAR",
  "CHART_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
  "CHART_STATUS",
  "VIEWER_STATUS",
  "CHART_STATUS",
  "HANDLERS_REMOVE",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_REMOVE",
]
`;

exports[`fetching an analytic search 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "HISTORY_PUSH",
  "VIEWER_CLEAR",
  "NOTICE_DISMISS",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
  "VIEWER_STATUS",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_REMOVE",
]
`;

exports[`fetching an analytic search without history 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "VIEWER_CLEAR",
  "NOTICE_DISMISS",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
  "VIEWER_STATUS",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_REMOVE",
]
`;

exports[`fetching an zoom search 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "HISTORY_PUSH",
  "VIEWER_CLEAR",
  "NOTICE_DISMISS",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
  "VIEWER_STATUS",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_REMOVE",
]
`;

exports[`fetching an zoom search without history 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "VIEWER_CLEAR",
  "NOTICE_DISMISS",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
  "VIEWER_STATUS",
  "VIEWER_STATUS",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_REMOVE",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_REMOVE",
]
`;

exports[`not saving a search to history 1`] = `
Array [
  "SEARCH_BAR_SUBMIT",
  "SEARCH_SPAN_SET",
  "VIEWER_CLEAR",
  "NOTICE_DISMISS",
  "CHART_CLEAR",
  "CHART_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_ABORT",
  "HANDLERS_REGISTER",
  "CHART_STATUS",
  "VIEWER_STATUS",
  "CHART_STATUS",
  "HANDLERS_REMOVE",
  "VIEWER_STATUS",
  "VIEWER_END_STATUS",
  "HANDLERS_REMOVE",
]
`;
